# DelugeFirmware

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .cproject  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  ARP_CONTROL_GUIDE.md  Blofeld Deep 1.XML  CHANGELOG.md  CLAUDE.md  CLIP_VISUALIZER_PLAN.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Cc 12 Og 2.XML  Cc 12 Og.XML  Cc 13.XML  Cc10.XML  Cc11.XML  Cc12.XML  Cc15.XML  Cc16.XML  Cc20.XML  Cc22.XML  Cc24.XML  Cc27.XML  CommunityFeatures.md  DEBUG-DIY_HARDWARE.md  DEVICE_NAME_MATCHING_SOLUTION.md  Deluge JLink 7seg.launch  Deluge JLink OLED.launch  Deluge.launch  DelugeProbe 7seg.launch  DelugeProbe OLED.launch  Doxyfile  (+29 more)
contrib/clang_tidy_review/: LICENSE  pyproject.toml
contrib/clang_tidy_review/clang_tidy_review/: __init__.py  post.py  review.py
crates/: Cargo.toml  rust-toolchain.toml
crates/.cargo/: config.toml
crates/.config/: nextest.toml
crates/deluge_alloc/: Cargo.toml
crates/deluge_alloc/.cargo/: config.toml
crates/deluge_alloc/fuzz/: Cargo.toml
crates/deluge_alloc/src/: lib.rs  slab.rs  testing.rs  tlsf.rs
crates/deluge_resource/: Cargo.toml
crates/deluge_resource/include/: deluge_resource.h
crates/deluge_resource/src/: lib.rs  manager.rs  testing.rs  value.rs
crates/deluge_rust/: Cargo.toml
crates/deluge_rust/src/: lib.rs
lib/: CMakeLists.txt
lib/NE10/: NE10_macros.h
lib/tinyusb/: tusb_config.h
pd/: .gitignore  CMakeLists.txt  deluge_dsp.c.in  pd.cmake
pd/src/legacy/: triangle.cpp
sim/: CMakeLists.txt  arm-linux-toolchain.cmake
sim/compat/: arm_neon.h
src/: Action.cpp  Action.h  ActionClipState.cpp  ActionClipState.h  ActionLogger.cpp  ActionLogger.h  Arpeggiator.cpp  Arpeggiator.h  Arrangement.cpp  Arrangement.h  ArrangerView.cpp  ArrangerView.h  AudioClip.cpp  AudioClip.h  AudioClipView.cpp  AudioClipView.h  AudioEngine.cpp  AudioEngine.h  AudioFile.cpp  AudioFile.h  AudioFileHolder.cpp  AudioFileHolder.h  AudioFileManager.cpp  AudioFileManager.h  AudioFileReader.cpp  AudioFileReader.h  AudioFileVector.cpp  AudioFileVector.h  AudioInputSelector.cpp  AudioInputSelector.h  AudioOutput.cpp  AudioOutput.h  AudioRecorder.cpp  AudioRecorder.h  AudioSample.h  AutoParam.cpp  AutoParam.h  AutomatedTester.cpp  AutomatedTester.h  BidirectionalLinkedList.cpp  (+494 more)
src/NE10/: .clang-format  CMakeLists.txt
src/NE10/common/: CMakeLists.txt
src/NE10/inc/: NE10_macros.h  NE10_types.h
src/NE10/modules/: CMakeLists.txt
src/OSLikeStuff/: CMakeLists.txt  scheduler_api.h  task.h  task_scheduler.c  task_scheduler.cpp  task_scheduler.h
src/OSLikeStuff/fault_handler/: fault_handler.c
src/OSLikeStuff/task_scheduler/: clock_type.h  resource_checker.h  task.h  task_scheduler.cpp  task_scheduler.h  (+1 more)
src/RTT/: CMakeLists.txt  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_ASM_ARMv7M.S  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
src/RZA1/: .clang-format  CMakeLists.txt  cpu_specific.h  diskio.c  peripheral_init_basic.c  sd_card_detect.h
src/RZA1/mtu/: mtu.c  (+2 more)
src/bsp/: CMakeLists.txt
src/deluge/: CMakeLists.txt  deluge.cpp  deluge.h  extern.h  version.h  version.h.in  wrenimpl.cpp  wrenimpl.h
src/dlmalloc/: dlmalloc.c  dlmalloc.h
src/dsp_ng/: CMakeLists.txt
src/fatfs/: .clang-format  CMakeLists.txt  diskio.h  fatfs.cpp  fatfs.hpp  ff.c  ff.h  ffconf.h
src/foundation/: CMakeLists.txt  panic.h  string_format.c  string_format.h  timer_count.c  timer_count.h
src/gsl/: gsl
src/lib/: CMakeLists.txt  printf.c  printf.h
src/midi/: CMakeLists.txt  message.cpp  message.h  usb_event.cpp  usb_event.h
src/util/: comparison.hpp  misc.hpp
tests/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  RunAllTests  RunAllTests.cpp  TuningSystem.test.cpp  cmake_install.cmake  demo_test.cpp  handraulic_test_midi_io.py  hellotest.cpp  memory_tests.cpp  requirements.txt  runtests.cpp  test-tuning.cpp  test_midi_config.py  tracking_allocator.h
tests/32bit_unit_tests/: CMakeLists.txt  RunAllTests.cpp  memory_tests.cpp  mock_memory_manager.cpp  mock_memory_manager.h
tests/arm/: CMakeLists.txt
tests/dsp_diff/: dsp_diff.cpp  run.sh  wave_diff.cpp
tests/fixtures/: 12tet.scl
tests/fuzz/: CMakeLists.txt  README.md  memmove_fuzz.c  pack_fuzz.c  semver_fuzz.cpp
tests/include/: arm_neon.h
tests/memory_tests/: CMakeLists.txt
tests/mocks/: mock_audio_engine.cpp  mock_audio_file_manager.cpp  mock_defines.h  mock_display.cpp  mock_encoder.cpp  mock_flash_storage.cpp  mock_indicator_leds.cpp  mock_playback_handler.cpp  mock_print.cpp  mock_qwerty_ui.cpp  mock_storage_manager.cpp  version.h
tests/qemu/: CMakeLists.txt
tests/spec/: CMakeLists.txt  audio_file_format_spec.cpp  empty_space_vector_spec.cpp  midi_usb_event_spec.cpp  object_pool_spec.cpp  path_spec.cpp  semver_spec.cpp  string_spec.cpp  tracking_allocator_spec.cpp
tests/spec_alloc/: CMakeLists.txt  deluge_alloc_conformance_spec.cpp  rust_allocator.h
tests/spec_memory/: CMakeLists.txt  allocator_conformance_spec.cpp  allocator_under_test.h  conformance.h  memory_region_allocator.h
tests/spec_resource/: CMakeLists.txt  deluge_resource_conformance_spec.cpp  mock_source.h
tests/unit/: CMakeLists.txt  audio_pacing_tests.cpp  browser_search_tests.cpp  chord_tests.cpp  clip_iterator_tests.cpp  clock_output_scheduler_tests.cpp  db_shift_tests.cpp  default_name_tests.cpp  envelope_tests.cpp  filter_morph_label_tests.cpp  function_tests.cpp  harmonizer_tests.cpp  lanes_engine_tests.cpp  lanes_property_tests.cpp  lfo_tests.cpp  matriceal_engine_tests.cpp  matriceal_property_tests.cpp  memory_tests.cpp  multisample_round_robin_tests.cpp  name_compare_tests.cpp  notes_state_tests.cpp  output_type_name_tests.cpp  pedal_state_tests.cpp  polymeter_metronome_tests.cpp  reverb_filter_roundtrip_tests.cpp  rgb_tests.cpp  round_robin_parser_tests.cpp  scale_tests.cpp  scheduler_tests.cpp  sync_tests.cpp  tempo_ratio_tests.cpp  time_signature_tests.cpp  time_tests.cpp  tuning_tests.cpp  tuning_tests.h  value_scaling_tests.cpp  volume_param_gain_tests.cpp  waveform_peak_math_tests.cpp
(+3589 files in other folders)
