[tool.poetry]
name = "DelugeFirmware"
version = "0.1.1"
description = "Open Source firmware for the Synthstrom Deluge"
authors = ["Your Name <you@example.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
SCons = "^4.5.2"

[tool.poetry.group.dev.dependencies]
pyocd = "^0.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
